<resources>
    <string name="app_name">Notes</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="note_list_fragment_label">My Notes</string>
    <string name="note_fragment_label">Note</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_create">Create</string>
    <string name="note_title">Add Note</string>
    <string name="label_add_note">Add Note*</string>
    <string name="hint_note_title">Write your title</string>
    <string name="label_description">Description*</string>
    <string name="hint_description">Write your description</string>
    <string name="title_submit">Submit</string>
    <string name="title_add_note">Add Note</string>
    <string name="title_update_note">Update Note</string>
    <string name="title_edit_note">Edit Note</string>
</resources>